Vault name pattern

--- a/src/main/resources/lang/eng.yml
+++ b/src/main/resources/lang/eng.yml
@@ -26,6 +26,7 @@ command.create.permission: "You have no permission"
 command.create.description: "Create new vault"
 command.create.usage: "Required arguments: [VAULT NAME]"
 command.create.in-game: "In game only"
+command.create.wrong-name: "Wrong name"
 command.create.max: "You can`t create more vaults"
 command.create.exists: "Vault with this name already exists"
 command.create.success: "Vault created"
