--- a/src/main/resources/lang/rus.yml
+++ b/src/main/resources/lang/rus.yml
@@ -26,6 +26,7 @@ command.create.permission: "Недостаточно прав"
 command.create.description: "создать хранилище"
 command.create.usage: "Необходимые аргументы: [VAULT NAME]"
 command.create.in-game: "Только в игре"
+command.create.wrong-name: "Проверьте название"
 command.create.max: "Вы не можете создать больше хранилищ"
 command.create.exists: "Хранилище с таким названием уже есть"
 command.create.success: "Хранилище создано"
