--- a/src/main/resources/lang/eng.yml
+++ b/src/main/resources/lang/eng.yml
@@ -1,16 +1,7 @@
-loading.init.start: "Initializing SVault V_{@ver} by Sergey Dertan..."
-loading.init.folders: "Creating folders..."
-loading.init.settings: "Settings initializing..."
-loading.init.libraries: "Loading libraries..."
-loading.init.update-available: "New version of SVault is available! {@ver}."
+=loading.init.update-available: "New version of SVault is available! {@ver}."
 loading.init.update-description: "Whats new? {@description}"
-loading.init.data-provider: "Data provider initializing..."
-loading.init.vaults: "Vaults initializing..."
-loading.init.events-handlers: "Events handlers initializing..."
-loading.init.commands: "Commands initializing..."
 loading.init.vaults-loaded: "Loaded {@amount} vaults."
 loading.data-provider: "Data provider was set to {@name}"
-loading.init.successful: "SVault initialized(took {@time}ms)."
 
 loading.error.folder: "Can`t create folder {@path}, disabling plugin..."
 loading.error.resource: "Can`t copy resource resource: {@err}, disabling plugin..."
